--- a/Restoria.html
+++ b/Restoria.html
@@ -297,7 +297,7 @@
   </footer>
 
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="main.js" defer></script>
+  <script src="JavaScript.js" defer></script>
 </body>
 
 </html>
